--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "mocha"
+    "start": "npm start index.js",
+    "test": "mocha --timeout 5000"
   },
   "author": "",
   "license": "ISC",
