--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm start index.js",
+    "start": "pm2 start index.js --name my-app --watch --ignore-watch=\"node_modules\"",
     "test": "mocha --timeout 5000"
   },
   "author": "",
@@ -16,6 +16,8 @@
   "devDependencies": {
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.21",
+    "pm2": "^5.2.2"
   }
 }
