--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Install dependencies
         run: npm install
-      - name: Run tests
+      - name: Run start
         run: npm start
+      - name: Run tests
+        run: npm tests
 
 
