--- a/.github/workflows/main_vijay-node-app.yml
+++ b/.github/workflows/main_vijay-node-app.yml
@@ -12,8 +12,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment:
-      name: 'Production'
+ #   environment:
+ #     name: 'Production'
 
     steps:
       - uses: actions/checkout@v2
@@ -38,9 +38,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+  #  environment:
+  #    name: 'Production'
+  #    url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - name: Download artifact from build job
