--- a/.github/workflows/main_vijay-node-app.yml
+++ b/.github/workflows/main_vijay-node-app.yml
@@ -12,8 +12,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
- #   environment:
- #     name: 'Production'
+    environment:
+      name: 'Production'
 
     steps:
       - uses: actions/checkout@v2
